fix bug-01 list restaurants